@@ -29,7 +29,9 @@ The rules for this file:
 	  in Universe()
         * trajectory reader: DCDReader can reverse trajectory with
           negative step increment; XTC/TRRReader can do simple
-          (forward) slices by doing (slow!) sequential iteration	  
+          (forward) slices by doing (slow!) sequential iteration
+        * deprecated principleAxes() and introduced principalAxes()
+          with less confusing return values (Issue 33).
 
 05/28/10 orbeckst, denniej0
         * 0.6.2 release
